--- a/util/accelwattch/accelwattch_hw_profiler/Makefile
+++ b/util/accelwattch/accelwattch_hw_profiler/Makefile
@@ -1,17 +1,12 @@
-TARGETS = dumpGpuPower measureGpuPower
+TARGET = measureGpuPower
 
 CC := g++
 NVML_LIB_DIR := -L$(CUDA_INSTALL_PATH)/lib64/stubs/
-CFLAGS := -I$(CUDA_INSTALL_PATH)/include/
-LDFLAGS := $(NVML_LIB_DIR) -lnvidia-ml
+CFLAGS  := -I$(CUDA_INSTALL_PATH)/include/
+LDFLAGS := $(NVML_LIB_DIR) -lnvidia-ml 
 
-all: $(TARGETS)
-
-dumpGpuPower: dumpGpuPower.cpp
-	$(CC) $(CFLAGS) $< -o $@ $(LDFLAGS)
-
-measureGpuPower: measureGpuPower.cpp
-	$(CC) $(CFLAGS) $< -o $@ $(LDFLAGS)
+$(TARGET): $(TARGET).cpp
+	$(CC) $(CFLAGS) $< -o $@ $(LDFLAGS) 
 
 clean:
-	rm -rf $(TARGETS)
+	rm -rf $(TARGET)
