--- a/util/job_launching/configs/define-standard-cfgs.yml
+++ b/util/job_launching/configs/define-standard-cfgs.yml
@@ -167,8 +167,7 @@ PTXPLUS_SM6:
 Accelwattch_SASS_SIM:
     extra_params: "-power_simulation_enabled 1
     \n-power_simulation_mode 0
-    \n-accelwattch_xml_file accelwattch_sass_sim.xml
-    \n-power_per_cycle_dump 1"
+    \n-accelwattch_xml_file accelwattch_sass_sim.xml"
 
 Accelwattch_SASS_HW:
     extra_params: "-power_simulation_enabled 1
