--- a/BT_one_cycle_mcpat_tesla_sass_sim_gpgpusim.config
+++ b/BT_one_cycle_mcpat_tesla_sass_sim_gpgpusim.config
@@ -139,9 +139,9 @@
 
 
 #These options do not appear in the QV100 Config
-#-gpgpu_shmem_option 0,8,16,32,64,96
-#-gpgpu_unified_l1d_size 128
-#-gpgpu_l1_cache_write_ratio 25
+-gpgpu_shmem_option 0,8,16,32,64,96
+-gpgpu_unified_l1d_size 128
+-gpgpu_l1_cache_write_ratio 25
 
 
 # L2 cache
