setting up McPat cycle printout during one instruction simulation

--- a/BT_one_cycle_mcpat_qv100_sass_sim_gpgpusim.config
+++ b/BT_one_cycle_mcpat_qv100_sass_sim_gpgpusim.config
@@ -230,6 +230,7 @@
 -gpgpu_runtime_stat 1
 -enable_ptx_file_line_stats 1
 -visualizer_enabled 0
+-power_per_cycle_dump 1
 
 # tracing functionality
 #-trace_enabled 1
