--- a/BT_one_cycle_mcpat_tesla_sass_sim_gpgpusim.config
+++ b/BT_one_cycle_mcpat_tesla_sass_sim_gpgpusim.config
@@ -203,6 +203,7 @@
 -gpgpu_runtime_stat 1
 -enable_ptx_file_line_stats 1
 -visualizer_enabled 0
+-power_per_cycle_dump 1
 
 # power model configs, disable it untill we create a real energy model
 #-power_simulation_enabled 0
